hphp/hack/test/typecheck/array/safe_vector_array/gen_array_rec_correctly_types_darray_argument.php.exp
File "gen_array_rec_correctly_types_darray_argument.php", line 8, characters 10-65:
Invalid return type (Typing[4110])
File "gen_array_rec_correctly_types_darray_argument.php", line 3, characters 46-49:
This is a nullable type
File "gen_array_rec_correctly_types_darray_argument.php", line 7, characters 69-71:
It is incompatible with an int
